# django-streamfield-w

./: .gitignore  LICENSE  README.md  TODO  pyproject.toml
streamfield/: __init__.py  form_fields.py  model_fields.py  utils.py  validators.py  widgets.py
streamfield/blocks/: __init__.py  base.py  field_block.py  list_block.py  stream_block.py  struct_block.py  utils.py
streamfield/forms/: boundfields.py
streamfield/static/streamfield/css/: streamfield.css
streamfield/static/streamfield/js/blocks/: list.js  sequence.js  stream.js
streamfield/static/streamfield/js/widgets/: DateTimeInputs.js
streamfield/templates/streamfield/block_forms/: field.html  list.html  list_member.html  sequence.html  sequence_member.html  stream.html  stream_member.html  stream_menu.html  struct.html
streamfield/templates/streamfield/widgets/: split_datetime.html
streamfield/templatetags/: streamfield_tags.py
streamfield/tests/: fixture_test_model.py  test_blocks.py  test_validators.py
